# magicremote-docs

./: .readthedocs-custom-steps.yml  mkdocs.yml  pyproject.toml
docs/: bak.md  cmd_editor.html  demo.html  index.md  index_en.md  requirements.txt  sdk.md
docs/res/: demo.funscript  demo2.funscript
docs/static/: jquery.form.min.js
