[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "magicremote-docts"
authors = [{name = "deploy.vtrump", email = "deploy@vtrump.com"}]
dynamic = ["version", "description"]

[tool.readthedocs-custom-steps]
script = """
pydoc-markdown --build --site-dir "$PWD/_build/html"
"""
